--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,9 @@ verify_ssl = true
 
 [packages]
 django = "*"
+gunicorn = "*"
+django-heroku = "*"
+django-cors-headers = "*"
 
 [requires]
 python_version = "3.8"
